# 3dmppc-polymer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: README.md  specs.md
docs/mppcdisc/: README.md
docs/mppcdisc/solid/: README.md  art-and-audio.md  characters.md  content.md  mechanics.md  overview.md  production.md  world.md
docs/platform/: README.md  disc-loading.md  specs.md
mppcdiscs/: README.md
mppcdiscs/solid/: README.md
mppcdiscs/solid/src/: areas.hpp  assets_gen.cpp  assets_gen.hpp  combat.cpp  dayloop.cpp  game_state.hpp  player.hpp  ritual.cpp  ritual.hpp  scene_render.cpp  scene_render.hpp  solid.cpp  solid.hpp  spawner.cpp  weapons.cpp  weapons.hpp
mppcdiscs/solidmaid/: README.md
mppcdiscs/solidmaid/assets/: protagonist.mtl  protagonist_model.glb
mppcdiscs/solidmaid/src/: areas.cpp  dayloop.hpp  enemies.cpp  enemies.hpp  hud.cpp  player.cpp  solidmaid.cpp  solidmaid.hpp  spawner.hpp
pdk/: README.md  rv_ca.hpp  rv_cd.hpp  rv_cio.hpp  rv_cv.hpp  rv_err.hpp  rv_pdko.hpp
pdk/ca/: rv_ca.hpp  rv_loop.hpp  rv_sample.hpp  rv_voice_conf.hpp
pdk/cd/: rv_cd.hpp
pdk/cio/: rv_cio.hpp  rv_imouse.hpp  rv_isource.hpp  rv_ohaptic.hpp
pdk/cm/: rv_cm.hpp
pdk/cv/: rv_cv.hpp  rv_pixel.hpp  rv_polygon.hpp  rv_primitive.hpp  rv_primitives.hpp  rv_rectangle.hpp  rv_texture.hpp  rv_vertex.hpp
pdk/de/: rv_de.hpp
pdk/include/pdk/: rv_pdko.hpp
pdk/include/pdk/ca/: rv_ca.hpp  rv_loop.hpp  rv_voice_conf.hpp
pdk/include/pdk/cd/: rv_cd.hpp
pdk/include/pdk/cio/: rv_cio.hpp  rv_ohaptic.hpp
pdk/include/pdk/cv/: rv_cv.hpp  rv_pipeline.hpp  rv_pixel.hpp  rv_primitives.hpp
pdk/include/pdk/de/: rv_de.hpp
src/: main.cpp
src/assets/: image.cpp  image.hpp  obj_loader.cpp  obj_loader.hpp  stb_image_impl.cpp
src/core/: audio.cpp  audio.hpp  audio_backend.hpp  color.hpp  framebuffer.hpp  input.hpp  savecard.cpp  savecard.hpp  savecard_file.hpp  window.cpp  window.hpp
src/game/: areas.cpp  areas.hpp  assets_gen.cpp  assets_gen.hpp  combat.cpp  combat.hpp  context.hpp  dayloop.cpp  dayloop.hpp  enemies.cpp  enemies.hpp  game_state.hpp  hud.cpp  hud.hpp  player.cpp  player.hpp  ritual.cpp  ritual.hpp  scene_render.cpp  scene_render.hpp  solid.cpp  solid.hpp  spawner.cpp  spawner.hpp  types.hpp  weapons.cpp  weapons.hpp
src/gpu/: camera.hpp  mesh.hpp  rasterizer.cpp  rasterizer.hpp  texture.hpp
src/math/: math.hpp
src/platform/: console.cpp  console.hpp  disc.hpp  platform.cpp  platform.hpp
src/rv_dmain/: rv_dmain.cpp  rv_dmain.hpp
src/rv_pconsole/: rv_pconsole.cpp  rv_pconsole.hpp  rv_pconsole_conf.hpp
src/rv_pconsole/ca/: rv_pcca.cpp  rv_pcca.hpp
src/rv_pconsole/cd/: rv_pccd.cpp  rv_pccd.hpp
src/rv_pconsole/cio/: rv_pccio.cpp  rv_pccio.hpp
src/rv_pconsole/cm/: rv_pccm.cpp  rv_pccm.hpp
src/rv_pconsole/cv/: rv_pccv.cpp  rv_pccv.hpp
